--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h5 id="full">Python full-stack developer</h5>
                     <p class= "header-dis"  >
                     Highly motivated and detail-oriented Fresher. I have gained hands-on experience with python and frameworks  as Django  and have developed web using  HTML, CSS, Bootstrap, JavaScript and jQuary.</p><br>
-                    <button class="hero-btn"><a href="C:\Users\vipin's\Desktop\portfolio new\Resume.pdf" download target="blank"> Bio-Data </a></button>
+                    <button class="hero-btn"><a href="Resume.pdf" download target="blank"> Bio-Data </a></button>
                   </div>
                   <div class="social">
                     <ul>
